# AquaDuck

./: .example.env  .gitignore  README.md  pyproject.toml
src/dbt/: .user.yml  dbt_project.yml  profiles.yml
src/dbt/models/: sources.yml
src/dbt/models/input/: fixer_exchange_rate.sql  models.yml  nordpool_spot_price.sql
src/dbt/models/output/: avg_spot_price_per_day.sql  models.yml
src/dbt/models/staging/: exchange_rate.sql  models.yml  spot_price.sql
src/ingest/fixer/: exchange_rate.py
src/ingest/nordpool/: spot_price.py
src/tests/ingest/fixer/: exchange_rate_test.py
src/tests/ingest/nordpool/: spot_price_test.py
src/tests/utils/: storage_test.py
src/tests/utils/clients/: fixer_test.py  nordpool_test.py
src/tests/utils/storage/: storage_test.py
src/utils/: storage.py
src/utils/clients/: fixer.py  nordpool.py
